[build-system]
requires = [
    "setuptools >= 39.2.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'


# TODO: move configuration to setup.cfg when available
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120


[tool.black]
line-length = 120
target-version = ["py38"]