[metadata]
name = python-jose
version = attr: jose.__version__
description = JOSE implementation in Python
long_description = file: README.rst
url = http://github.com/mpdavis/python-jose
keywords = jose jws jwe jwt json web token security signing
author = Michael Davis
author_email = mike.philip.davis@gmail.com
license = MIT
project_urls=
    Documentation = https://python-jose.readthedocs.io/en/latest/
    Source = https://github.com/mpdavis/python-jose/
    Tracker = https://github.com/mpdavis/python-jose/issues/
    Changelog = https://github.com/mpdavis/python-jose/blob/master/CHANGELOG.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities


[options]
packages = find:
python_requires = >=3.7
install_requires =
    ecdsa != 0.15
    rsa >=4.0, <5.0, !=4.4, !=4.1.1
    pyasn1 >=0.4.1, <0.5.0

[options.extras_require]
test =
    pytest
    pytest-cov
cryptography =
    cryptography >=3.4.0
pycrypto =
    pycrypto >=2.6.0, <2.7.0
pycryptodome =
    pycryptodome >=3.3.1, <4.0.0

[options.packages.find]
exclude =
    tests*


[wheel]
universal = 1
[bdist_wheel]
universal = 1


[flake8]
max-line-length = 120
ignore = E203,W503

[aliases]
test=pytest

[tool:pytest]
addopts = --cov-report term-missing --cov jose
testpaths = tests
python_files = test_*.py
